Add missing jvm arguments which where causing failure during magicdraw startup (when giving licence info)