@@ -13,6 +13,30 @@ abstract class RunTests extends JavaExec {
         workingDir "$project.buildDir/install"
         mainClass = 'com.nomagic.magicdraw.commandline.CommandLineActionLauncher'
 
+        javaLauncher.set(
+                project.extensions.getByType(JavaToolchainService).launcherFor {
+                    def jvmVersion = project.findProperty('jvmVersion')
+                    if (jvmVersion == null) {
+                        throw new GradleException("You need to specify the 'jvmVersion' property in your gradle.properties file")
+                    }
+                    it.languageVersion.set(JavaLanguageVersion.of(jvmVersion))
+                }
+        )
+        jvmArgs = [
+                "-XX:+IgnoreUnrecognizedVMOptions",
+                "-Xmx4000M",
+                "-Xss1024K",
+                "-DLOCALCONFIG=true",
+                "-splash:data/splash.png",
+                "-Desi.system.config=data/application.conf",
+                "-Djdk.attach.allowAttachSelf=true",
+                "-Dsun.locale.formatasdefault=true",
+                "-XX:-OmitStackTraceInFastThrow",
+                "--illegal-access=permit",
+                "-Dfile.encoding=UTF-8",
+                "@bin/vm.options",
+                "-Djdk.util.zip.disableZip64ExtraFieldValidation=true"
+        ]
         // Test args
         jvmArgs += [
                 "-Desi.system.config=data/application.conf",
@@ -26,14 +50,5 @@ abstract class RunTests extends JavaExec {
                 "-DuserPwd=$project.properties.twcPassword",
                 "-Dtest=true"
         ]
-        javaLauncher.set(
-                project.extensions.getByType(JavaToolchainService).launcherFor {
-                    def jvmVersion = project.findProperty('jvmVersion')
-                    if (jvmVersion == null) {
-                        throw new GradleException("You need to specify the 'jvmVersion' property in your gradle.properties file")
-                    }
-                    it.languageVersion.set(JavaLanguageVersion.of(jvmVersion))
-                }
-        )
     }
 }
